# DatabricksMDM

./: .env.template  .gitignore  DEPLOYMENT_GUIDE.md  LICENSE  QUICK_START.md  README.md  databricks.yml  mkdocs.yml  pyproject.toml  requirements.txt  setup_databricks.py
01_ingestion/: multi_source_connector.py
02_matching/: entity_resolution.py
03_golden_record/: survivorship.py
04_quality/: dq_framework.py
05_catalog/: unity_catalog_integration.py
Databricks_MDM/: README.md  databricks.yml  pyproject.toml
Databricks_MDM/resources/: Databricks_MDM_etl.pipeline.yml  sample_job.job.yml
Databricks_MDM/src/: sample_notebook.ipynb
Databricks_MDM/tests/: sample_taxis_test.py
api/: mdm_api.py
conf/domains/: customer.yml  location.yml  product.yml  supplier.yml
config/: mdm_config.yaml
data/sample/: odoo_customers.csv  oracle_customers.csv  salesforce_customers.csv  sap_customers.csv
docs/: README.md  blueprint.html  code.html  domain.html  index.html  index.md  market.html  native.html  risks.html  roadmap.html  solid.html
docs/assets/: nav.js  style.css
legacy/: README.md
legacy/04_quality/: dq_framework.py
legacy/sdk/: mdm_python_sdk.py
legacy/workflows/: mdm_pipeline.py
mdm/: __init__.py  cli.py
mdm/core/: __init__.py  model.py  ports.py  service.py
mdm/pipelines/: __init__.py  bronze_ingest.py  master_publish.py  match_cluster.py  silver_standardize.py
mdm/runtime/: __init__.py  encoders.py  observability.py  repository_delta.py  repository_memory.py  (+3 more)
sdk/: mdm_python_sdk.py
tests/: test_purity.py
workflows/: mdm_pipeline.py
(+39 files in other folders)
